<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#E0E0E0">

    <!-- Profile Picture and Admin Title -->
    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:background="#D3D3D3"
            android:src="@drawable/ic_profile_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!-- Tabs -->
    <LinearLayout
        android:id="@+id/Admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"

        android:weightSum="5">

        <Button
            android:id="@+id/manage_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_events"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_profile"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_image"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_qr_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_qr_code"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_facilities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_facilities"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_below="@id/Admin">
        <ViewFlipper
            android:id="@+id/admin_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Manage Events Layout -->
            <ScrollView
                android:id="@+id/Event_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Events -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Add content for Manage Events here -->
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Event"
                    android:textSize="24sp">
                        </TextView>



                </LinearLayout>
            </ScrollView>

            <!-- Manage Profile Layout -->
            <ScrollView
                android:id="@+id/profile_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Profile -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Add your content for Manage Profile here -->
                </LinearLayout>
            </ScrollView>

            <!-- Manage Image Layout -->
            <ScrollView
                android:id="@+id/image_detals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Image -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Add your content for Manage Image here -->
                </LinearLayout>
            </ScrollView>

            <!-- Manage QR Code Layout -->
            <ScrollView
                android:id="@+id/QRqoute_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage QR Code -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Add  content for Manage QR Code here -->
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="QR Code"
                    android:textSize="24sp">

                    </TextView>

                </LinearLayout>
            </ScrollView>

            <!-- Manage Facilities Layout -->
            <ScrollView
                android:id="@+id/facilities_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Facilities -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- Add content for Manage Facilities here -->

                </LinearLayout>
            </ScrollView>

        </ViewFlipper>




    </LinearLayout>

    <!-- Tabs -->

</RelativeLayout>